Expanded list of allowed NER entities